# metaspn-store

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: publish.yml
src/metaspn_store/: __init__.py  store.py
test/: conftest.py  test_store.py
